errorpath is marked in cfa (not finished)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@17793 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/app/generic.css
+++ b/Counterexample_Report/app/generic.css
@@ -97,7 +97,7 @@ td:first-child {
     margin: 0px;
     border: none;
 }
-.sourceContent tr:nth-child(2n+1) td pre.prettyprint {
+.sourceContent tr:nth-child(odd) td pre.prettyprint {
     background-color: #f3f3f3;
 }
 .markedSourceLine{
