give cfa- and arg-elements special IDs, restructure code, call Report-Class in MainCPAStatistics
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@17810 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/app/generic.css
+++ b/Counterexample_Report/app/generic.css
@@ -47,7 +47,7 @@ height: 25px;
 }
 
 
-#errorpath{
+#errorpath_section{
     position:relative;
     float: left;
     width: 25%;
@@ -70,7 +70,7 @@ height: 25px;
 #middleLine:hover{
     background-color: grey;
 }
-#pictures{
+#externalFiles_section{
     float: right;
     width: 75%;
     height: inherit;
