get path of sourcefile from CPAchecker.java, realize jumps inside of the html: from errorpath to ARG/CFA/Source, from ARG to CFA/Source, from CFA to source, from CFA-function-nodes to CFA of that function (new feature)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@17821 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/app/generic.css
+++ b/Counterexample_Report/app/generic.css
@@ -101,8 +101,33 @@ td:first-child {
     background-color: #f3f3f3;
 }
 .markedSourceLine{
-    background-color: orange;
+    background-color: #ff9c00;
 }
+.markedCFAEdge path{
+    stroke: #ff9c00;
+}
+.markedCFAEdge polygon{
+    fill: #ff9c00;
+    stroke: #ff9c00;
+}
+.markedCFAEdge text{
+    fill: #ff9c00;
+}
+
+.markedCFANode text{
+    fill: #ff9c00;
+}
+.markedCFANode ellipse{
+    stroke: #ff9c00;
+}
+.markedCFANode polygon{
+    stroke: #ff9c00;
+}
+
+.markedARGNode polygon{
+    fill: #ff9c00;
+}
+
 .cfaContent{
     margin: 20px;
     margin-top: 40px;
