add new key 'valString to each ErrorpathElement and show it when clicked on source-node-number in Errorpath, fix that node and edge can be marked at the same time in CFA
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@17860 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/app/generic.css
+++ b/Counterexample_Report/app/generic.css
@@ -57,6 +57,7 @@ height: 25px;
     border-color: lightgrey;
     padding: 5px;
 }
+
 #middleLine{
     cursor: col-resize;
     position: absolute;
@@ -78,6 +79,16 @@ height: 25px;
     padding: 5px;
     border: solid 4px;
     border-color: lightgrey;
+}
+
+.popover{
+    min-width: 500px;
+    max-height: 500px;
+    white-space: pre-line;
+    overflow: auto;
+    background-color: #f5fff8;
+    border: solid 2px;
+    border-color: #00d415;
 }
 
 .fileContent {
@@ -126,6 +137,10 @@ td:first-child {
 
 .markedARGNode polygon{
     fill: #ff9c00;
+}
+.markedTableElement{
+    border: solid 2px;
+    border-color: #00d415;
 }
 
 .cfaContent{
