fixed the bugs from the last commit, implemented svg-zoom for CFAs (TODO: clear zoom when cfa-graph is changed)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@17870 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/app/generic.css
+++ b/Counterexample_Report/app/generic.css
@@ -163,12 +163,14 @@ td:first-child {
 }
 .markedValues{
     background-color: #83d480;
+    border-radius: 25px;
     margin-bottom: 2px;
     padding: 2px;
     max-width: 200px;
 }
 .markedDescriptions{
     background-color: #71afff;
+    border-radius: 20px;
     padding: 2px;
     margin-bottom: 2px;
     max-width: 200px;
@@ -180,15 +182,24 @@ td:first-child {
 }
 .dropdown-line{
     position: fixed;
-    width: inherit;
     background-color: white;
     padding: 5px;
 }
 .dropdown-line div{
-    display: inline;
+    display: inline-block;
 }
 .dropdown-line label{
-    display: inline;
+    display: inline-block;
+}
+#cfa-scalingField{
+    margin-left: 100px;
+    width: 50px;
+    display: inline-block;
+}
+#cfa-scalingSlider{
+    margin-left: 10px;
+    width: 200px;
+    display: inline-block;
 }
 
 div pre{
