use return for search-field
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@18570 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/app/generic.css
+++ b/Counterexample_Report/app/generic.css
@@ -192,12 +192,14 @@ td:first-child {
     border-radius: 25px;
     margin-bottom: 2px;
     padding: 2px;
+    padding-left: 8px;
     max-width: 200px;
 }
 .markedDescriptions{
     background-color: #71afff;
     border-radius: 20px;
     padding: 2px;
+    padding-left: 8px;
     margin-bottom: 2px;
     max-width: 200px;
 }
