--- a/Counterexample_Report/app/generic.css
+++ b/Counterexample_Report/app/generic.css
@@ -123,7 +123,7 @@ height: 25px;
 }
 
 #errorpath_section .fileContent {
-    height: calc(100% - 130px);
+    height: calc(100% - 110px);
     margin: 5px;
     overflow: auto;
 }
@@ -138,6 +138,14 @@ table {
 }
 td:first-child {
     background-color: #ccc;
+}
+#err_table td pre {
+    padding: 0px;
+    margin: 0px;
+    border: none;
+}
+#err_table tr:nth-child(odd) td pre.prettyprint {
+    background-color: #f3f3f3;
 }
 .sourceContent td pre {
     padding: 0px;
@@ -178,14 +186,20 @@ td:first-child {
     border: solid 2px;
     border-color: #00d415;
 }
-.markedValueElement{
-    background-color: #83d480;
+.markedValueElement pre{
+    background-color: #83d480 !important;
 }
-.markedDescElement{
-    background-color: #71afff;
+.markedDescElement pre{
+    background-color: #71afff !important;
 }
-.markedValueDescElement{
-    background: linear-gradient(#83d480, #71afff);
+.markedValueDescElement pre{
+    background: linear-gradient(#83d480, #71afff) !important;
+}
+#searchOptions label{
+    font-weight: normal;
+}
+#matches{
+    display: none;
 }
 .markedValues{
     background-color: #83d480;
@@ -203,7 +217,6 @@ td:first-child {
     margin-bottom: 2px;
     max-width: 200px;
 }
-
 .cfaContent{
     margin: 20px;
     margin-top: 45px;
