deal with more than 1 sourcefile, scroll source to center
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@19143 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/app/generic.css
+++ b/Counterexample_Report/app/generic.css
@@ -232,6 +232,9 @@ td:first-child {
     /* This is very important - otherwise right margin is not shown (and nodes cannot be centered) */
     display: inline-block;
 }
+.sourceContent{
+    margin-top: 45px;
+}
 .edit-line{
     position: fixed;
     background-color: white;
