revised right help text (added explanation for nodes in cfa and colour ins arg)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/counterexample-report@19156 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/Counterexample_Report/app/generic.css
+++ b/Counterexample_Report/app/generic.css
@@ -143,6 +143,8 @@ table {
 }
 td:first-child {
     background-color: #ccc;
+    border-radius: 6px;
+
 }
 #err_table td pre {
     padding: 0px;
@@ -276,4 +278,8 @@ div pre{
     margin:0px;
     display: inline-block;
     float: right;
+}
+#externalFiles_section .help_button{
+    margin-left: 10px;
+    float: left;
 }
